added: -password for user -API to create user with password -primote and demote user role (admin)
